<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/reg_signInButton"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegistrationActivity">

    <ImageView
        android:id="@+id/reg_logo"
        android:layout_width="315dp"
        android:layout_height="124dp"
        android:layout_marginTop="50dp"
        android:contentDescription="@string/app_name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/logo" />

    <EditText
        android:id="@+id/reg_usernameField"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:ems="10"
        android:hint="@string/username"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="@+id/reg_logo"
        app:layout_constraintStart_toStartOf="@+id/reg_logo"
        app:layout_constraintTop_toBottomOf="@+id/reg_logo" />

    <EditText
        android:id="@+id/reg_emailField"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:ems="10"
        android:hint="@string/email_address"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="@+id/reg_logo"
        app:layout_constraintStart_toStartOf="@+id/reg_logo"
        app:layout_constraintTop_toBottomOf="@+id/reg_usernameField" />

    <EditText
        android:id="@+id/reg_passwordField"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="@+id/reg_emailField"
        app:layout_constraintStart_toStartOf="@+id/reg_emailField"
        app:layout_constraintTop_toBottomOf="@+id/reg_emailField" />

    <EditText
        android:id="@+id/reg_repeatPasswordField"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:ems="10"
        android:hint="@string/repeat_password"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="@+id/reg_passwordField"
        app:layout_constraintStart_toStartOf="@+id/reg_passwordField"
        app:layout_constraintTop_toBottomOf="@+id/reg_passwordField" />

    <Button
        android:onClick="onSignIn"
        android:id="@+id/button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:text="@string/sign_in"
        app:layout_constraintEnd_toEndOf="@+id/reg_repeatPasswordField"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="@+id/reg_repeatPasswordField"
        app:layout_constraintTop_toBottomOf="@+id/reg_repeatPasswordField" />
</androidx.constraintlayout.widget.ConstraintLayout>