<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/loginPT"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity">

    <ImageView
        android:onClick="onLogo"
        android:id="@+id/log_Logo"
        android:layout_width="315dp"
        android:layout_height="124dp"
        android:layout_marginTop="50dp"
        android:contentDescription="@string/app_name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/logo" />

    <EditText
        android:id="@+id/log_EmailField"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/email_address"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="@+id/log_Logo"
        app:layout_constraintStart_toStartOf="@+id/log_Logo"
        app:layout_constraintTop_toBottomOf="@+id/log_Logo" />

    <EditText
        android:id="@+id/log_PasswordField"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="@+id/log_EmailField"
        app:layout_constraintStart_toStartOf="@+id/log_EmailField"
        app:layout_constraintTop_toBottomOf="@+id/log_EmailField" />

    <Button
        android:onClick="onLogin"
        android:id="@+id/log_loginButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:text="@string/log_in"
        app:layout_constraintEnd_toEndOf="@+id/log_PasswordField"
        app:layout_constraintStart_toStartOf="@+id/log_PasswordField"
        app:layout_constraintTop_toBottomOf="@+id/log_PasswordField" />

    <View
        android:id="@+id/divider"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="60dp"
        android:layout_marginEnd="30dp"
        android:background="?android:attr/listDivider"
        app:layout_constraintEnd_toEndOf="@+id/log_loginButton"
        app:layout_constraintStart_toStartOf="@+id/log_loginButton"
        app:layout_constraintTop_toBottomOf="@+id/log_loginButton" />

    <Button
        android:onClick="onRegistration"
        android:id="@+id/log_registerButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:text="@string/create_new_account"
        app:layout_constraintEnd_toEndOf="@+id/divider"
        app:layout_constraintStart_toStartOf="@+id/divider"
        app:layout_constraintTop_toBottomOf="@+id/divider" />

</androidx.constraintlayout.widget.ConstraintLayout>